--- a/main.html
+++ b/main.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
 
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AccioJob Blog</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <!-- Marquee Header -->
+    <marquee>
+        <h1>Welcome to Accio Jobs!</h1>
+    </marquee>
+
+    <!-- Blog Link -->
+    <a href="link_to_accio_jobs_blog" target="_blank">
+        <h1>Accio Job's Blog</h1>
+    </a>
+
+    <!-- Articles -->
+    <div>
+        <!-- Article 1: Brute Force vs. Optimization -->
+        <h2>Brute Force vs. Optimization</h2>
+        <img src="image_url_1" alt="Brute Force vs. Optimization" height="200px">
+        <a href="link_to_brute_force_vs_optimization" target="_blank">
+            <p>We can say that optimization is...</p>
+        </a>
+
+        <!-- Article 2: DSA vs. Competitive Programming -->
+        <h2>DSA vs. Competitive Programming</h2>
+        <img src="image_url_2" alt="DSA vs. Competitive Programming" height="200px">
+        <a href="link_to_dsa_vs_competitive_programming" target="_blank">
+            <p>DSA or Competitive programming?...</p>
+        </a>
+
+        <!-- Article 3: Complete Guide on FlexBox -->
+        <h2>Complete Guide on FlexBox</h2>
+        <img src="image_url_3" alt="Complete Guide on FlexBox" height="200px">
+        <a href="link_to_complete_guide_on_flexbox" target="_blank">
+            <p>As a job seeker, you may wonder...</p>
+        </a>
+    </div>
 
 </body>
-
 </html>
